New code updates and changes
Har börjat med sortiment sidan samt hjälp Therese med input på hennes nyhets sida.

--- a/styleres.css
+++ b/styleres.css
@@ -11,11 +11,15 @@ h1 {
 
 
 .logo {
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 100%;
     padding: 5px;
-    width: 100px; /* Adjust the width as needed */
+    width: 170px; /* Adjust the width as needed */
     height: auto; /* Maintain aspect ratio */
+    /* border: 1px solid #ddd; */
+    /* border-radius: 4px; */
+    /* padding: 5px; */
+    /* width: 100px; Adjust the width as needed */
+    /* height: auto; Maintain aspect ratio */
 }
 
 header {
@@ -23,7 +27,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #f8f8f8;
+    background-color: rgba(224, 224, 224, 0.548);
 }
 
 .menu-toggle {
