--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
-/* Variabels and mixins */
+/* Variabels and mixins, kommer hålla dem markerade då vi måste klippa in dem i sass och tailwind filer */
 
-/* $primarycolor: rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+/* $primarycolor rgb(224, 224, 224); */
+
+
+/* @mixins layout1 { */
+    /* display:flex; */
+    /* flex-direction: column; */
+/* } */
 
 /* Global Styles */
 body {
@@ -9,7 +22,6 @@ body {
 }
 
 .logo {
-    /* border: 1px solid #ddd; */
     border-radius: 100%;
     padding: 5px;
     width: 170px; /* Adjust the width as needed */
@@ -136,7 +148,7 @@ nav {
     height: auto;
 }
 
-.box1-content-text {
+.box1-content-text{
     font-size: xx-large;
     padding-left: 20px;
 }
