--- a/stylesort.css
+++ b/stylesort.css
@@ -1,54 +1,49 @@
-@charset "UTF-8";
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, sans-serif;
-  /* Responsive Styles for Small Boxes */
-  /* Media Queries */
 }
-body header {
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: rgba(224, 224, 224, 0.5490196078);
+  background-color: rgba(224, 224, 224, 0.548);
   /* Links in nav desktop */
   /* Hamburger Menu Styles */
   /* Mobile Navigation Popup Menu Styles */
   /* Display Navigation Links on Checkbox Checked */
   /* Link Styles in Mobile Menu */
 }
-body header .logo {
+header .logo {
   border-radius: 100%;
   padding: 5px;
   width: 170px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
 }
-body header .menu-toggle {
+header .menu-toggle {
   opacity: 0;
 }
-body header nav {
+header nav {
   display: flex;
   align-items: center;
 }
-body header .nav-list {
+header .nav-list {
   list-style: none;
   display: flex; /* Show links by default on larger screens */
   margin: 0;
   padding: 0;
 }
-body header .nav-list li {
+header .nav-list li {
   margin-left: 20px;
 }
-body header .nav-list a {
+header .nav-list a {
   text-decoration: none;
   color: rgb(49, 49, 49);
   font-size: x-large;
   font-weight: bold;
 }
-body header .hamburger {
+header .hamburger {
   display: none;
   background: none;
   border: none;
@@ -56,7 +51,7 @@ body header .hamburger {
   cursor: pointer;
   padding: 20px;
 }
-body header .nav-list-mobile {
+header .nav-list-mobile {
   display: none; /* Hide links by default */
   position: absolute; /* Position it over the content */
   top: 60px; /* Adjust based on your header height */
@@ -67,238 +62,115 @@ body header .nav-list-mobile {
   flex-direction: column; /* Stack links vertically */
   padding: 10px 0; /* Add some vertical padding */
 }
-body header .menu-toggle:checked + .hamburger + .nav-list-mobile {
+header .menu-toggle:checked + .hamburger + .nav-list-mobile {
   display: flex; /* Show links when the menu is toggled */
 }
-body header .nav-list-mobile li {
+header .nav-list-mobile li {
   padding: 10px 20px; /* Add padding for the links */
 }
-body header .nav-list-mobile a {
+header .nav-list-mobile a {
   text-decoration: none; /* Remove underline */
   color: #333; /* Dark text color */
   display: block; /* Make the entire area clickable */
 }
-body main {
+
+main {
   display: flex;
   flex-direction: column;
   font-family: Arial, sans-serif;
-  /* Saras påhitt  */
-  /* SARAS KLOKHETER */
-  /* The parent box containg the items */
-  /* Scrollbar function */
-  /* The text UL list items */
-  /* SARAS KLOKHETER */
-  /* Small Box Styles */
+  background-color: white;
+  justify-content: space-between;
 }
-body main .sort-main-text {
+main .sort-main-text {
   margin: 50px;
 }
-body main .box1, body main .box2, body main .box3, body main .resbox1, body main .resbox2, body main .resbox3 {
-  display: flex;
-  align-items: center;
-  box-shadow: 0px 0px 10px 1px rgb(163, 163, 163);
-  padding: 15px;
-  margin: 0px 50px 50px 50px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-}
-body main .box-content1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 100%;
-  height: auto;
-}
-body main .box1-content-text {
+main .sort-main-text h1 {
+  margin-bottom: 1px;
   font-size: xx-large;
-  padding-left: 20px;
 }
-body main .linkhtml3 {
-  text-decoration: none;
-  color: black;
+main .sort-main-text .paragraf-1 {
+  margin-top: 0%;
 }
-body main .scrollbar-genre-nav {
-  padding-left: 10px;
-  display: flex;
-  flex-direction: row;
-  width: infinite;
-  overflow-x: scroll;
-  scrollbar-width: thin;
-  justify-content: flex-start;
-  list-style-type: none;
-}
-body main .genre-box1, body main .genre-box2, body main .genre-box3, body main .genre-box4, body main .genre-box5, body main .genre-box6, body main .genre-box7, body main .genre-box8, body main .genre-box9 {
-  color: rgb(247, 191, 233);
-  text-shadow: 1px 1px 2px black;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /*background-image: linear-gradient(to right, rgba(240, 112, 112, 0.726), rgba(255, 148, 246, 0.808)); */
-  border-radius: 5px;
-  padding: 20px 50px;
-  margin: 0px 8px 0px 0px;
-  font-size: x-large;
-  text-transform: uppercase;
-  font-weight: bold;
+main article .sortiment {
   text-align: center;
 }
-body main .genre-box1 {
-  background-image: url("Sources/horror1-transformed.jpeg");
-}
-body main .genre-box2 {
-  background-image: url(Sources/thriller-transformed.jpeg);
-}
-body main .genre-box3 {
-  background-image: url(Sources/romance.jpg);
-}
-body main .genre-box4 {
-  background-image: url(Sources/drama.jpg);
-}
-body main .genre-box5 {
-  background-image: url(Sources/crime.jpg);
-}
-body main .genre-box6 {
-  background-image: url(Sources/scifi.jpg);
-}
-body main .genre-box7 {
-  background-image: url(Sources/comedy.jpg);
-}
-body main .genre-box8 {
-  background-image: url(Sources/history.jpg);
-}
-body main .genre-box9 {
-  background-image: url(Sources/poetic.jpg);
-}
-body main .box-image, body main .resbox1, body main .resbox2, body main .resbox3 {
-  width: 100px; /* Adjust as needed */
-  height: auto; /* Maintain aspect ratio */
-  margin-right: 15px; /* Space between image and text */
-}
-body main .box-content {
-  flex: 1; /* Allow text to take remaining space */
-}
-body main .box-content h2,
-body main .small-box-content h2 {
-  margin: 0 0 10px 0; /* Spacing for title */
-}
-body main .small-boxes {
+main article .boxes {
   display: flex;
-  justify-content: space-between; /* Space the boxes evenly */
-  margin: 20px;
-}
-body main .small-box1, body main .small-box2 {
-  margin-right: 30px;
-  margin-left: 30px;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
   display: flex;
-  align-items: center;
-  border: 1px solid #ccc;
-  padding: 15px;
-  width: calc(50% - 10px); /* Set width to half and account for spacing */
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif;
+  background-color: rgba(224, 224, 224, 0.5490196078);
+  box-shadow: 0px 0px 10px 2px grey;
+  margin: 30px 20px 30px 20px;
+  padding: 20px;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  list-style-type: none;
 }
-body main .small-box-image {
-  width: 80px; /* Adjust as needed */
-  height: auto; /* Maintain aspect ratio */
-  margin-right: 15px; /* Space between image and text */
+main article .bokbox {
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, sans-serif;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  overflow-y: scroll;
 }
-body main .small-box-content {
-  flex: 1; /* Allow text to take remaining space */
+main article li {
+  display: flex;
+  flex-direction: row;
+  font-family: Arial, sans-serif;
+  list-style-type: none;
+  width: 120px;
+  margin: 5px;
+  padding: 1px;
 }
+main article img {
+  width: 120px;
+}
+
+footer {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  background-color: rgba(224, 224, 224, 0.5490196078);
+}
+
+/* Responsive Styles for Small Boxes */
 @media (max-width: 768px) {
-  body .small-boxes {
+  .small-boxes {
     flex-direction: column; /* Stack small boxes vertically */
     margin: 0 15px; /* Add horizontal margin for equal spacing */
-    margin-right: 50px;
-    margin-left: 50px;
   }
-  body .small-box1, body .small-box2 {
+  .small-box1, .small-box2 {
     width: calc(100% - 30px); /* Ensure boxes are slightly narrower */
     margin: 0 auto 15px auto; /* Center the box and add bottom margin */
   }
 }
+/* Media Queries */
 @media (max-width: 768px) {
-  body {
-    /* SARAS KLOKHETER */
-    /* The parent box containg the items */
-    /* Scrollbar function */
-    /* The text UL list items */
-  }
-  body .nav-list {
+  .nav-list {
     display: none; /* Hide links by default on mobile */
     flex-direction: column;
   }
-  body .hamburger {
+  .hamburger {
     display: block; /* Show hamburger menu */
   }
-  body .welcome-text {
+  .welcome-text {
     padding: 0;
     margin: 0;
     font-size: x-large;
   }
-  body .main-text {
+  .main-text {
     margin: 30px 0px 80px 35px;
   }
-  body .quote {
-    font-style: italic;
-    color: #555;
-    border-left: 4px solid #ffffff;
-    padding-left: 10px;
-    margin: 2px;
-    font-size: 1em;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-            user-select: none; /* Prevent text selection */
-    outline: none; /* Remove outline */
-  }
-  body .box-content1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 100%;
-    height: auto;
-  }
-  body .box1-content-text {
-    font-size: x-large;
-    padding-left: 20px;
-  }
-  body .scrollbar-genre-nav {
-    padding-left: 10px;
-    display: flex;
-    flex-direction: row;
-    width: infinite;
-    overflow-x: scroll;
-    scrollbar-width: thin;
-    justify-content: flex-start;
-    list-style-type: none;
-  }
-  body .genre-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    /*background-image: linear-gradient(to right, rgba(240, 112, 112, 0.726), rgba(255, 148, 246, 0.808)); */
-    border-radius: 5px;
-    padding: 20px 50px;
-    margin: 0px 8px 0px 0px;
-    font-size: x-large;
-    text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-  }
-}
-
-footer {
-  margin-right: 30px;
-  margin-left: 45px;
-  margin-top: -15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f8f8;
-}
-
-img {
-  padding-right: 15px;
-}
-
-/*# sourceMappingURL=stylesort.css.map */
+}/*# sourceMappingURL=stylesort.css.map */
